--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
-    "recharts": "^3.3.0"
+    "recharts": "^3.3.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
