--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
     "lucide-react": "^0.294.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.15.3",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.30.1",
-    "recharts": "^3.3.0",
-    "multer": "^1.4.5-lts.1"
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
