--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
-    "test": "vitest run",
-
+    "test": "vitest run"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.693.0",
