Checkpoint: 修復了 CRM 音檔管理系統中缺失的 /api/audio/parse-filename API 端點。
**修改內容：**
1. 在 server.mjs 中添加了 POST /api/audio/parse-filename 端點（第 655-726 行）
2. 實現了完整的檔名解析邏輯，支持格式：YYYYMMDDNNNN_業務名_產品名_MMDD_HHMM.mp3
3. 修復了正則表達式 bug：/\.[^\/\.]+$/ （移除了多餘的空格）
4. 修改了 package.json 的 dev 腳本，使用 concurrently 同時啟動前端（port 5173）和後端（port 3000）
5. 添加了 concurrently 依賴到 devDependencies

**測試結果：**
✅ API 端點正常工作，能正確解析檔名並返回結構化數據

**預期效果：**
- 前端上傳音檔時會調用 /api/audio/parse-filename 解析檔名
- 解析成功後顯示客戶編號、業務名、產品名、通話日期和時間
- 用戶確認後可以上傳到 R2

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "main": "server.mjs",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"node server.mjs\" \"vite\"",
+    "dev:frontend": "vite",
+    "dev:backend": "node server.mjs",
     "build": "vite build",
     "start": "node server.mjs",
     "preview": "vite preview"
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
+    "concurrently": "^8.2.2",
     "vite": "^5.4.0"
   },
   "engines": {
