--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.1",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.3.0",
     "uuid": "^13.0.0",
