--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.4",
     "googleapis": "^118.0.0",
     "lucide-react": "^0.294.0",
     "multer": "^1.4.5-lts.1",
