--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "googleapis": "^118.0.0",
     "lucide-react": "^0.294.0",
     "multer": "^1.4.5-lts.1",
+    "music-metadata": "^11.10.0",
     "mysql2": "^3.15.3",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
