--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.931.0",
+    "axios": "^1.13.2",
     "chart.js": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,6 +27,7 @@
     "music-metadata": "^11.10.0",
     "mysql2": "^3.15.3",
     "node-fetch": "^2.7.0",
+    "openai": "^6.9.0",
     "pg": "^8.11.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
