--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-router-dom": "^6.30.1",
     "recharts": "^3.3.0",
     "uuid": "^13.0.0",
-    "ws": "^8.18.3"
+    "ws": "^8.18.3",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
